# Flowlang

./: .gitlab-ci.yml  NOTES.md  Notes.md  README.md  README_old.md  build.zig  build.zig.zon  checklist.md  flake.nix
bench/: bench_runner.zig  bench_step.zig
bench/benches/: addition_loop.flow  append.flow  closure.flow  fibonacci.flow  function_calls.flow  int_to_string.flow  strings.flow
bench/findings/: Notes.md
docs/: Extensions.md  Grammar.md  LanguageRef.md
example/: build.zig  build.zig.zon  exports.zig  main.flow  test.flow
example/example_module/: root.zig
example/src/: closures.flow  main.flow  (+2 more)
src/: Parser.zig  Scanner.zig  Token.zig  ast.zig  error_reporter.zig  main.zig  testing.zig
tests/: integration.zig  integration_tests.zig  main.zig  new_test_runner.zig  run_integration_tests.zig  test_runner.zig
tree-sitter-flow/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-flow/bindings/c/: tree-sitter-flow.pc.in
tree-sitter-flow/bindings/go/: binding.go  binding_test.go
tree-sitter-flow/bindings/node/: binding.cc
tree-sitter-flow/bindings/python/tests/: test_binding.py
tree-sitter-flow/bindings/python/tree_sitter_flow/: __init__.py  binding.c
tree-sitter-flow/bindings/rust/: build.rs  lib.rs
tree-sitter-flow/bindings/swift/TreeSitterFlow/: flow.h
tree-sitter-flow/bindings/swift/TreeSitterFlowTests/: TreeSitterFlowTests.swift
tree-sitter-flow/src/: grammar.json  node-types.json  parser.c
tree-sitter-flow/test/corpus/: declarations.txt  expressions.txt  statements.txt
(+111 files in other folders)
