[package]
name = "tree-sitter-flow"
description = "A toy language, inspired by Go's concurrency model"
version = "0.1.0"
authors = ["Niklas Koll <niklas@nkoll.de>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "flow"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-flow"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
